--- a/frontend-app/package.json
+++ b/frontend-app/package.json
@@ -7,9 +7,12 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest",
+    "test:ui": "vitest --ui",
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/user-event": "^14.2.0",
     "antd": "^4.21.1",
     "axios": "^0.27.2",
     "react": "^18.0.0",
@@ -21,6 +24,8 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "@vitest/ui": "^0.15.1",
+    "jsdom": "^19.0.0",
     "typescript": "^4.6.3",
     "vite": "^2.9.9",
     "vitest": "^0.15.1"
