--- a/frontend-app/package.json
+++ b/frontend-app/package.json
@@ -8,7 +8,8 @@
     "preview": "vite preview",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "antd": "^4.21.1",
@@ -18,6 +19,7 @@
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
+    "@testing-library/cypress": "^8.0.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.2.0",
@@ -25,6 +27,7 @@
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
     "@vitest/ui": "^0.15.1",
+    "cypress": "^10.1.0",
     "jsdom": "^19.0.0",
     "msw": "^0.42.1",
     "typescript": "^4.6.3",
