--- a/frontend-app/tsconfig.node.json
+++ b/frontend-app/tsconfig.node.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "composite": true,
     "module": "esnext",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "types": ["cypress", "@testing-library/cypress"]
   },
   "include": ["vite.config.ts"]
 }
